# xc-api-py

./: .gitignore  README.md  pyproject.toml  xc_api_demo.py
.github/workflows/: publish.yml  pypi-publish.yml
src/xc_api/: __init__.py  client.py  recording_audio.py  search_tags.py  types.py
src/xc_api/schemas/: field_validators.py  recording.py  search_query.py  search_response.py
src/xc_api_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/xeno_canto/: __init__.py  clients.py  constants.py  patterns.py  recording_audio.py  session.py  tags.py  types.py  utils.py
src/xeno_canto/client/: client.py  client_errors.py  client_http.py  client_params.py  client_schemas.py  client_types.py  types.py
src/xeno_canto/dtos/: __init__.py  coordinates.py  search_query_params.py
src/xeno_canto/dtos/xeno_canto_audio/: __init__.py  errors.py  xeno_canto_audio.py
src/xeno_canto/dtos/xeno_canto_query/: __init__.py  dataclass.py  fields.py  schema.py  serializers.py
src/xeno_canto/dtos/xeno_canto_query/fields/: serializers.py
src/xeno_canto/dtos/xeno_canto_query/fields/bio/: bio.py  (+1 more)
src/xeno_canto/dtos/xeno_canto_recording/: __init__.py  dataclass.py  schema.py
src/xeno_canto/dtos/xeno_canto_recording/fields/: serializers.py  validators.py
src/xeno_canto/dtos/xeno_canto_response/: __init__.py  schema.py
src/xeno_canto/query/: field_serializers.py  query_fields.py  query_params.py  query_schema.py
src/xeno_canto/recording/: common_fields.py  field_serializers.py  field_validators.py  recording.py  recording_fields.py  recording_schema.py  resource_schemas.py
src/xeno_canto/schemas/: api_response.py  field_serializers.py  field_validators.py  recording.py  search_query.py
src/xeno_canto/tags/: __init__.py  numeric_tag.py  search_tag.py  tag_types.py  tags.py  types.py
src/xeno_canto/tags/geo/: __init__.py  types.py
src/xeno_canto/tags/meta/: __init__.py
tests/: test.py  test_client.py  testme.py
(+14 files in other folders)
